--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>يوسف الأحمر | مطور مواقع ويب</title>
+    <title>يوسف الأحمر</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -392,4 +392,5 @@
         });
     </script>
 </body>
+
 </html>
