--- a/index.html
+++ b/index.html
@@ -331,6 +331,14 @@
                 </button>
                 <div class="icon-label">Whatsapp</div>
             </div>
+
+            <div class="icon-container">
+                <button class="icon-btn" onclick="window.open('https://www.linkedin.com/in/yousef-alahmr-66206b380?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app', '_blank')">
+                    <i class="fab fa-linkedin"></i>
+                </button>
+                <div class="icon-label">LinkedIn</div>
+            </div>
+
             
             <div class="icon-container">
                 <button class="icon-btn" onclick="window.open('https://www.instagram.com/yousef_alahmr/?utm_source=ig_web_button_share_sheet', '_blank')">
