--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
             
             <div class="icon-container">
-                <button class="icon-btn" onclick="window.open('https://www.instagram.com/yousef_alahmr/?utm_source=ig_web_button_share_sheet', '_blank')">
+                <button class="icon-btn" onclick="window.open('https://www.instagram.com/youssseeeeeeff/', '_blank')">
                     <i class="fab fa-instagram"></i>
                 </button>
                 <div class="icon-label">instagram</div>
@@ -472,3 +472,4 @@
     </script>
 </body>
 </html>
+
